--- a/TASMod/manifest.json
+++ b/TASMod/manifest.json
@@ -4,7 +4,7 @@
   "Version": "0.0.1",
   "Description": "Stardew TAS Mod",
   "UniqueID": "underscore.tasmod",
-  "EntryDll": "SDVTASMod.dll",
+  "EntryDll": "TASMod.dll",
   "MinimumApiVersion": "3.15.0",
   "UpdateKeys": [ "GitHub:Underscore76/SDVTASMod" ]
 }
