parent 2e931286880680ee98980a0782905988a9415c95 author Underscore76 <theunderscore76@gmail.com> 1687233377 -0500 committer Underscore76 <theunderscore76@gmail.com> 1691181622 -0500
ability to toggle overlays/logic

more overlay porting and adding console subscribers

distinguish entry from result text and engine state funcs

missed files on prior commit

Update README.md

Update README.md

Port of most logics and overlays from TAS, pathfinding stuff missing

forgotten references to TASMod.Extensions

copied AudioEngine fix  from main

fixed "cant find consolefont" bug, GhostCancel off by default

Pathfinding code and overlays, genpath, walkpath ported

infomation commands ported

small naming tweaks

updated readme and some extra commands

link to skiasharp nuget

console fix, also trying to diagnose reset speed

speedup fast reset/load and some guards on inputs

--- a/TASMod/TASMod.csproj
+++ b/TASMod/TASMod.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <EnableHarmony>true</EnableHarmony>
     <CheckEolTargetFramework>false</CheckEolTargetFramework>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +12,7 @@
     <PackageReference Include="NLua" Version="1.6.2" />
     <PackageReference Include="DynamicExpresso.Core" Version="2.16.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SkiaSharp" Version="2.88.3" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Patches\" />
@@ -29,14 +31,9 @@
     <Folder Include="Patches\" />
     <Folder Include="Inputs\" />
     <Folder Include="Extensions\" />
-    <Folder Include="Overlays\" />
-    <Folder Include="Console\" />
     <Folder Include="Assets\" />
     <Folder Include="Monogame.Framework\" />
     <Folder Include="Recording\" />
-    <Folder Include="Automation\" />
-    <Folder Include="Helpers\" />
-    <Folder Include="Console\Commands\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md">
