--- a/TASMod/TASMod.csproj
+++ b/TASMod/TASMod.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="NLua" Version="1.6.2" />
     <PackageReference Include="DynamicExpresso.Core" Version="2.16.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SkiaSharp" Version="2.88.3" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Patches\" />
