working view on base zoom, but zoom is breaking brain

--- a/TASMod/TASMod.csproj
+++ b/TASMod/TASMod.csproj
@@ -26,6 +26,7 @@
     <None Remove="Automation\" />
     <None Remove="Helpers\" />
     <None Remove="Console\Commands\" />
+    <None Remove="Views\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Patches\" />
@@ -39,6 +40,7 @@
     <Folder Include="Automation\" />
     <Folder Include="Helpers\" />
     <Folder Include="Console\Commands\" />
+    <Folder Include="Views\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md">
